--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
     "nodemon": "^3.1.11",
-    "react-router-dom": "^7.10.1"
+    "react-router-dom": "^7.10.1",
+    "zod": "^4.1.13"
   }
 }
